--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "repository": "https://github.com/labs15-pain-point/backend.git",
   "author": "matt0418 <mfeldma7@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js",
+    "server": "nodemon index.js"
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.20.1",
     "knex": "^0.19.3",
