--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "helmet": "^3.20.1",
     "knex": "^0.19.3",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
